--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.2.5",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "storybook-addon-next": "^1.6.7",
     "typescript": "4.7.4"
   }
 }
