--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-links": "^6.5.10",
     "@storybook/addon-storyshots": "^6.5.12",
     "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/test-runner": "^0.7.0",
